# shipr

./: .eidos-plugin.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.grok-plugin/: plugin.json
docs/: shipr-product-model.md
skills/use-shipr/: SKILL.md
src/shipr/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
